--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,15 +20,13 @@
             android:layout_width="fill_parent"
             android:layout_height="250dp"
             android:layout_gravity="center"
-            android:layout_margin="4dp"
             android:padding="4dp"
             android:src="@mipmap/southaven_logo" />
 
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/login_useremail"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
             android:background="@color/white"
             android:hint="@string/hint_email"
             android:inputType="textEmailAddress"
@@ -38,21 +36,21 @@
             android:textColorHint="@color/Gray" />
 
         <EditText
-            android:id="@+id/password"
+            android:id="@+id/login_password"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
             android:background="@color/white"
             android:hint="@string/hint_password"
             android:inputType="textPassword"
             android:padding="10dp"
             android:singleLine="true"
             android:textColor="@color/black"
-            android:textColorHint="@color/Gray" />
+            android:textColorHint="@color/Gray"
+            android:layout_marginTop="10dp"/>
 
         <CheckBox
-            android:id="@+id/replymail_chbx"
-            android:layout_width="wrap_content"
+            android:id="@+id/remember_me"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:text="@string/Remember_check"
@@ -63,7 +61,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="10dp"
             android:backgroundTint="@color/black"
             android:padding="15dp"
             android:text="@string/btn_login"
@@ -76,21 +73,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="5dp"
             android:gravity="center_horizontal"
             android:text="@string/btn_forgotpassword"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            android:layout_marginTop="10dp"/>
 
-        <com.thisit.southavencrm.customfonts.TextviewSourceSansProRegular
+        <com.thisit.southavencrm.customfonts.TextviewSourceSansProBold
+            android:id="@+id/btn_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="5dp"
             android:gravity="center_horizontal"
             android:text="@string/btn_register"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            android:textSize="16dp"
+            android:layout_marginTop="10dp"/>
     </LinearLayout>
 
 </LinearLayout>
