--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -43,113 +43,87 @@
 
         </LinearLayout>
 
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/brown"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/bg_grayedit"
+            android:gravity="left|center"
+            android:text="@string/user_name"
+            android:padding="10dp"
+            android:textColor="@color/black"
+            android:textSize="@dimen/textsize_small"
+            android:autofillHints="" />
 
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="10dp"
-                android:layout_weight="1"
-                android:textColor="@color/black"
-                android:textSize="@dimen/textsize_small" />
-
-
-        </LinearLayout>
-
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/brown"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/bg_grayedit"
+            android:gravity="left|center"
+            android:text="username.thisit@gmail.com"
+            android:padding="10dp"
+            android:textColor="@color/black"
+            android:textSize="@dimen/textsize_small"
+            android:autofillHints="" />
 
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="10dp"
-                android:layout_weight="1"
-                android:textColor="@color/black"
-                android:textSize="@dimen/textsize_small2" />
-
-        </LinearLayout>
-
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/brown"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/bg_grayedit"
+            android:gravity="left|center"
+            android:text="91746745"
+            android:padding="10dp"
+            android:textColor="@color/black"
+            android:textSize="@dimen/textsize_small"
+            android:autofillHints="" />
 
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="10dp"
-                android:layout_weight="1"
-                android:textColor="@color/black"
-                android:textSize="@dimen/textsize_small2" />
-        </LinearLayout>
-
-        <LinearLayout
+        <EditText
+            android:id="@+id/name_et"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/brown"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/bg_grayedit"
+            android:gravity="left|center"
+            android:hint="@string/contacthint"
+            android:inputType="text"
+            android:padding="10dp"
+            android:textColor="@color/black"
+            android:textSize="@dimen/textsize_small"
+            android:autofillHints="" />
 
-            <EditText
-                android:id="@+id/name_et"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/bg_grayedit"
-                android:gravity="left|center"
-                android:hint="@string/contacthint"
-                android:inputType="text"
-                android:padding="10dp"
-                android:textColor="@color/black"
-                android:textSize="@dimen/textsize_small"
-                android:autofillHints="" />
-        </LinearLayout>
-
-        <LinearLayout
+        <EditText
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/brown"
-            android:orientation="horizontal">
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/bg_grayedit"
-                android:gravity="left|center"
-                android:hint="@string/contacthint2"
-                android:inputType="text"
-                android:padding="10dp"
-                android:textColor="@color/black"
-                android:textSize="@dimen/textsize_small" />
-
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/bg_grayedit"
+            android:gravity="left|center"
+            android:hint="@string/contacthint2"
+            android:inputType="text"
+            android:padding="10dp"
+            android:textColor="@color/black"
+            android:textSize="@dimen/textsize_small" />
 
         <Button
             android:id="@+id/Savebutton"
