--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,12 +4,14 @@
     <item
         android:id="@+id/history"
         android:title="@string/history"
-        android:enabled="true"
         android:icon="@drawable/history"/>
     <item
         android:id="@+id/location"
         android:title="@string/location"
         android:icon="@drawable/location"/>
+    <item
+        android:id="@+id/card"
+        android:title=""/>
 
     <item
         android:id="@+id/profile"
