--- a/app/src/main/res/layout/fragment_changepassword.xml
+++ b/app/src/main/res/layout/fragment_changepassword.xml
@@ -107,7 +107,7 @@
                 android:textColor="@color/black" />
 
             <EditText
-                android:id="@+id/name_et"
+                android:id="@+id/confirm_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
