--- a/app/src/main/res/layout/item_loctionview.xml
+++ b/app/src/main/res/layout/item_loctionview.xml
@@ -8,6 +8,7 @@
     app:cardUseCompatPadding="true">
 
     <LinearLayout
+        android:id="@+id/hold_parent_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="4dp"
@@ -20,7 +21,7 @@
             android:orientation="horizontal">
 
             <com.thisit.southavencrm.customfonts.TextviewSourceSansProBold
-                android:id="@+id/location_tv"
+                android:id="@+id/location_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -63,17 +64,31 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_weight="1"
+    android:gravity="left"
+    android:orientation="vertical">
+    <com.thisit.southavencrm.customfonts.TextviewSourceSansProRegular
+        android:id="@+id/address_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/my_card"
+        android:breakStrategy="simple"
+        android:textColor="@color/black"
+        android:textSize="16dp" />
 
-            <com.thisit.southavencrm.customfonts.TextviewSourceSansProRegular
-                android:id="@+id/address_tv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:gravity="left"
-                android:text="@string/my_card"
-                android:textColor="@color/black"
-                android:textSize="16dp" />
+    <com.thisit.southavencrm.customfonts.TextviewSourceSansProRegular
+        android:id="@+id/Country_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/my_card"
+        android:textColor="@color/black"
+        android:textSize="16dp" />
+</LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
