--- a/app/src/main/res/layout/activity_forgotpassword.xml
+++ b/app/src/main/res/layout/activity_forgotpassword.xml
@@ -45,7 +45,7 @@
             android:textColor="@color/black" />
 
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/email_EditText"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
            android:layout_margin="10dp"
@@ -59,7 +59,7 @@
 
 
         <Button
-            android:id="@+id/btn_login"
+            android:id="@+id/send_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
