--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="dark_brown">#9b8450</color>
     <color name="brown">#eae3d3</color>
     <color name="Silver_gray">#CCCCCC</color>
+    <color name="light_gray">#efeeee</color>
 </resources>
